--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -9,10 +9,9 @@
   "scripts": {
     "flow": "flow check",
     "flow-typed": "rimraf flow-typed/npm && flow-typed install --overwrite || true",
+    "prepare": "npm run build && npm run build:flow",
     "build": "./node_modules/.bin/babel ./src --out-dir ./distribution --source-maps",
-    "flow:build": "flow-remove-types ./src/ -d ./distribution --all --pretty",
     "build:flow": "flow-copy-source -v -i '**/__tests__/**' src distribution",
-    "prepublish": "npm run build",
     "start": "./distribution/cli.js",
     "precommit": "lint-staged",
     "lint": "eslint --cache --format=node_modules/eslint-formatter-pretty .",
