--- a/packages/virtuintaskdispatcher/package.json
+++ b/packages/virtuintaskdispatcher/package.json
@@ -9,10 +9,9 @@
   "scripts": {
     "flow": "flow check",
     "flow-typed": "rimraf flow-typed/npm && flow-typed install --overwrite || true",
+    "prepare": "npm run build && npm run build:flow",
     "build": "./node_modules/.bin/babel ./src --out-dir ./distribution --source-maps",
-    "flow:build": "flow-remove-types ./src/ -d ./distribution --all --pretty",
     "build:flow": "flow-copy-source -v -i '**/__tests__/**' src distribution",
-    "prepublish": "npm run build",
     "start": "./distribution/cli.js",
     "api-html": "./node_modules/.bin/documentation build src/ -f html -o ./docs --shallow",
     "api-md": "./node_modules/.bin/documentation build src/ -f md -o ./docs/api.md --shallow",
