--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -38,6 +38,7 @@
   "license": "MIT",
   "homepage": "https://bitbucket.org/samteccmd/virtuintaskdispatcher#readme",
   "dependencies": {
+    "virtuintaskdispatcher": "^0.0.24",
     "commander": "^2.16.0",
     "deep-diff": "^1.0.2",
     "dotenv": "^6.0.0",
