--- a/packages/task-rest-service/package.json
+++ b/packages/task-rest-service/package.json
@@ -29,6 +29,7 @@
     "babel-polyfill": "6.26.0",
     "babel-preset-latest": "6.24.1",
     "body-parser": "1.18.3",
+    "dateformat": "^3.0.3",
     "debug": "^3.1.0",
     "express": "4.16.3",
     "gulp": "3.9.1",
@@ -37,7 +38,7 @@
     "morgan": "1.9.0"
   },
   "devDependencies": {
-    "flow-bin": "^0.80.0",
+    "flow-bin": "^0.81.0",
     "flow-copy-source": "^2.0.2",
     "flow-typed": "^2.0.0",
     "gulp-flowtype": "1.0.0",
