--- a/packages/virtuingui/.babelrc
+++ b/packages/virtuingui/.babelrc
@@ -1,9 +1,12 @@
 {
   "presets": [
-    ["env", {
-      "targets": { "node": 7 },
-      "useBuiltIns": true
-    }],
+    [
+      "env",
+      {
+        "targets": { "node": 10 },
+        "useBuiltIns": true
+      }
+    ],
     "stage-0",
     "react"
   ],
@@ -17,11 +20,15 @@
       "plugins": [
         "transform-class-properties",
         "transform-es2015-classes",
-        ["flow-runtime", {
-          "assert": false,
-          "annotate": true
-        }]
+        [
+          "flow-runtime",
+          {
+            "assert": true,
+            "annotate": true
+          }
+        ]
       ]
     }
   }
 }
+
