--- a/packages/virtuingui/.flowconfig
+++ b/packages/virtuingui/.flowconfig
@@ -4,6 +4,7 @@
 <PROJECT_ROOT>/app/main.prod.js.map
 <PROJECT_ROOT>/app/dist/.*
 <PROJECT_ROOT>/resources/.*
+<PROJECT_ROOT>/node_modules/webpack-cli
 <PROJECT_ROOT>/release/.*
 <PROJECT_ROOT>/dll/.*
 <PROJECT_ROOT>/release/.*
@@ -12,7 +13,6 @@
 
 [include]
 app/
-../..
 
 [libs]
 flow-typed
