--- a/packages/virtuingui/package.json
+++ b/packages/virtuingui/package.json
@@ -5,10 +5,10 @@
   "description": "Virtuin GUI is the enty point for controlling and monitoring Virtuin-based tests.",
   "scripts": {
     "build": "concurrently \"npm run build-main\" \"npm run build-renderer\"",
-    "build-dll": "cross-env NODE_ENV=development node --trace-warnings -r babel-register ../../node_modules/webpack/bin/webpack --config webpack.config.renderer.dev.dll.js --colors",
-    "build-main": "cross-env NODE_ENV=production node --trace-warnings -r babel-register ../../node_modules/webpack/bin/webpack --config webpack.config.main.prod.js --colors",
-    "build-renderer": "cross-env NODE_ENV=production node --trace-warnings -r babel-register ../../node_modules/webpack/bin/webpack --config webpack.config.renderer.prod.js --colors",
-    "dev": "cross-env START_HOT=1 node -r babel-register ./internals/scripts/CheckPortInUse.js && cross-env START_HOT=1 npm start-renderer-dev",
+    "build-dll": "cross-env NODE_ENV=development node --trace-warnings -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.renderer.dev.dll.js --colors",
+    "build-main": "cross-env NODE_ENV=production node --trace-warnings -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.main.prod.js --colors",
+    "build-renderer": "cross-env NODE_ENV=production node --trace-warnings -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.renderer.prod.js --colors",
+    "dev": "cross-env START_HOT=1 node -r babel-register ./internals/scripts/CheckPortInUse.js && cross-env START_HOT=1 npm run start-renderer-dev",
     "electron-rebuild": "electron-rebuild --parallel --force --types prod,dev,optional --module-dir app",
     "dist": "electron-builder -mwl --publish always",
     "dist:linux": "electron-builder -l --publish always",
@@ -16,7 +16,7 @@
     "dist:win": "electron-builder -w --publish always",
     "flow": "flow",
     "flow-typed": "rimraf flow-typed/npm && flow-typed install --overwrite || true",
-    "lint": "cross-env NODE_ENV=development eslint --cache --format=../../node_modules/eslint-formatter-pretty .",
+    "lint": "cross-env NODE_ENV=development eslint --cache --format=./node_modules/eslint-formatter-pretty .",
     "lint-fix": "npm run lint -- --fix",
     "lint-styles": "stylelint app/*.css app/components/*.css --syntax scss",
     "lint-styles-fix": "stylefmt -r app/*.css app/components/*.css",
@@ -26,12 +26,12 @@
     "package:linux": "npm run build && build --linux",
     "package:mac": "npm run build && build --mac",
     "package:win": "npm run build && build --win --x64",
-    "postinstall": "node -r babel-register internals/scripts/CheckNativeDep.js && npm run flow-typed && npm run build-dll && electron-builder install-app-deps && ../../node_modules/fbjs-scripts/node/check-dev-engines.js package.json",
+    "postinstall": "node -r babel-register internals/scripts/CheckNativeDep.js && npm run flow-typed && npm run build-dll && electron-builder install-app-deps && ./node_modules/fbjs-scripts/node/check-dev-engines.js package.json",
     "prestart": "npm run build",
     "release": "build",
     "start": "cross-env NODE_ENV=production electron ./app/",
     "start-main-dev": "cross-env HOT=1 NODE_ENV=development electron -r babel-register ./app/main/main.dev.js",
-    "start-renderer-dev": "cross-env NODE_ENV=development node --trace-warnings -r babel-register ../../node_modules/webpack-dev-server/bin/webpack-dev-server --config webpack.config.renderer.dev.js",
+    "start-renderer-dev": "cross-env NODE_ENV=development node --trace-warnings -r babel-register ./node_modules/webpack-dev-server/bin/webpack-dev-server --config webpack.config.renderer.dev.js",
     "start-main-dev-test": "cross-env HOT=1 NODE_ENV=development electron -r babel-register ./app/main/main.dev --collection /tmp/collection.json --save /tmp/collection_results.json",
     "test": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 node --trace-warnings -r babel-register ./internals/scripts/RunTests.js",
     "test-all": "npm run lint && npm run flow && npm run build && npm run test && npm run test-e2e",
@@ -45,7 +45,7 @@
     "files": [
       "dist/",
       "node_modules/",
-      "../../node_modules/",
+      "./node_modules/",
       "renderer/assets/html/app.html",
       "main/main.prod.js",
       "main/main.prod.js.map",
@@ -131,7 +131,7 @@
     ],
     "moduleDirectories": [
       "node_modules",
-      "../../node_modules",
+      "./node_modules",
       "app/node_modules"
     ],
     "transform": {
@@ -186,7 +186,7 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "fbjs-scripts": "^0.8.1",
     "file-loader": "^2.0.0",
-    "flow-bin": "^0.79.1",
+    "flow-bin": "^0.81.0",
     "flow-runtime": "^0.17.0",
     "flow-typed": "^2.4.0",
     "identity-obj-proxy": "^3.0.0",
@@ -220,6 +220,7 @@
     "@samtec-ash/bonjour-mdns": "^0.0.3",
     "bootstrap": "^4.1.1",
     "cloudlogging": "^0.1.1",
+    "dateformat": "^3.0.3",
     "devtron": "^1.4.0",
     "electron-debug": "^2.0.0",
     "electron-redux": "^1.3.1",
@@ -230,14 +231,14 @@
     "jquery": "^3.3.1",
     "material-ui": "^0.20.1",
     "node-vagrant": "^1.3.3",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "react-electron-web-view": "^2.0.1",
-    "react-hot-loader": "^4.0.0-beta.13",
-    "react-redux": "^5.0.6",
+    "react-hot-loader": "^4.3.4",
+    "react-redux": "^5.0.7",
     "react-resizable-box": "^2.1.0",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^4.0.0",
     "redux-promise": "^0.6.0",
