--- a/packages/virtuintaskdispatcher/package.json
+++ b/packages/virtuintaskdispatcher/package.json
@@ -42,6 +42,7 @@
     "amqplib": "^0.5.1",
     "babel-runtime": "^6.26.0",
     "commander": "^2.16.0",
+    "dateformat": "^3.0.3",
     "deep-diff": "^1.0.2",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
@@ -73,7 +74,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-promise": "^4.0.0",
     "eslint-plugin-react": "^7.3.0",
-    "flow-bin": "^0.80.0",
+    "flow-bin": "^0.81.0",
     "flow-copy-source": "^2.0.2",
     "flow-remove-types": "^1.2.3",
     "flow-typed": "^2.3.0",
