--- a/packages/virtuingui/package.json
+++ b/packages/virtuingui/package.json
@@ -26,10 +26,10 @@
     "package:linux": "npm run build && electron-builder build --linux",
     "package:mac": "npm run build && electron-builder build --mac",
     "package:win": "npm run build && electron-builder build --win --x64",
-    "postinstall": "node -r babel-register internals/scripts/CheckNativeDep.js && npm run flow-typed && npm run build-dll && electron-builder install-app-deps && ./node_modules/fbjs-scripts/node/check-dev-engines.js package.json",
+    "postinstall": "node -r babel-register internals/scripts/CheckNativeDep.js && npm run flow-typed && npm run build-dll && electron-builder install-app-deps package.json",
     "prestart": "npm run build",
     "start": "cross-env NODE_ENV=production electron ./app/",
-    "start-main-dev": "cross-env HOT=1 NODE_ENV=development electron --inspect-brk=5858 -r babel-register ./app/main/main.dev.js",
+    "start-main-dev": "cross-env HOT=1 NODE_ENV=development electron --inspect=5858 -r babel-register ./app/main/main.dev.js",
     "start-renderer-dev": "cross-env NODE_ENV=development node --trace-warnings -r babel-register ./node_modules/webpack-dev-server/bin/webpack-dev-server --config webpack.config.renderer.dev.js",
     "start-main-dev-test": "cross-env HOT=1 NODE_ENV=development electron -r babel-register ./app/main/main.dev --collection /tmp/collection.json --save /tmp/collection_results.json",
     "test": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 node --trace-warnings -r babel-register ./internals/scripts/RunTests.js",
