refrest task status on start/run

--- a/packages/virtuingui/package.json
+++ b/packages/virtuingui/package.json
@@ -21,12 +21,12 @@
     "lint-styles": "stylelint app/*.css app/components/*.css --syntax scss",
     "lint-styles-fix": "stylefmt -r app/*.css app/components/*.css",
     "pack": "electron-builder --dir",
-    "package": "npm run build && electron-builder build --publish never",
-    "package-all": "npm run build && electron-builder build -mwl",
-    "package:linux": "npm run build && electron-builder build --linux",
-    "package:mac": "npm run build && electron-builder build --mac",
-    "package:win": "npm run build && electron-builder build --win --x64",
-    "postinstall": "node -r babel-register internals/scripts/CheckNativeDep.js && npm run flow-typed && npm run build-dll && electron-builder install-app-deps package.json",
+    "package": "npm run build && npx electron-builder build --publish never",
+    "package-all": "npm run build && npx electron-builder build -mwl",
+    "package:linux": "npm run build && npx electron-builder build --linux",
+    "package:mac": "npm run build && npx electron-builder build --mac",
+    "package:win": "npm run build && npx electron-builder build --win --x64",
+    "postinstall": "node -r babel-register internals/scripts/CheckNativeDep.js && npm run flow-typed && npm run build-dll && npx electron-builder install-app-deps package.json",
     "prestart": "npm run build",
     "start": "cross-env NODE_ENV=production electron ./app/",
     "start-main-dev": "cross-env HOT=1 NODE_ENV=development electron --inspect=5858 -r babel-register ./app/main/main.dev.js",
