--- a/packages/virtuingui2/package.json
+++ b/packages/virtuingui2/package.json
@@ -1,15 +1,30 @@
 {
   "name": "virtuingui2",
-  "version": "1.0.0",
-  "description": "Virtuin GUI",
-  "main": "main.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
-  },
-  "author": "Pages",
-  "license": "ISC",
+  "version": "0.1.0",
+  "private": true,
   "devDependencies": {
-    "electron": "^5.0.0-beta.2"
-  }
+    "electron": "^5.0.0-beta.2",
+    "foreman": "^3.0.1",
+    "react-scripts": "2.1.3"
+  },
+  "dependencies": {
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1"
+  },
+  "homepage": "./",
+  "main": "src/electron-starter.js",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "electron": "electron .",
+    "dev": "nf start -p 3000"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
