--- a/packages/virtuingui2/package.json
+++ b/packages/virtuingui2/package.json
@@ -8,8 +8,19 @@
     "react-scripts": "2.1.3"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.7",
+    "@emotion/styled": "^10.0.7",
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
+    "babel-plugin-emotion": "^10.0.7",
     "react": "^16.1.1",
-    "react-dom": "^16.1.1"
+    "react-dom": "^16.1.1",
+    "react-redux": "^6.0.0",
+    "react-scripts": "2.1.3",
+    "react-svg": "^7.2.6",
+    "redux": "^4.0.1",
+    "redux-actions": "^2.6.4",
+    "redux-saga": "^1.0.1"
   },
   "homepage": "./",
   "main": "src/electron-starter.js",
