--- a/packages/virtuingui2/package.json
+++ b/packages/virtuingui2/package.json
@@ -250,6 +250,7 @@
     "@material-ui/icons": "^3.0.2",
     "babel-plugin-emotion": "^10.0.7",
     "devtron": "^1.4.0",
+    "dotenv": "^6.2.0",
     "electron-debug": "^2.0.0",
     "electron-log": "^2.2.17",
     "electron-updater": "^3.2.3",
