--- a/packages/virtuingui2/package.json
+++ b/packages/virtuingui2/package.json
@@ -266,7 +266,8 @@
     "redux-actions": "^2.6.4",
     "redux-saga": "^1.0.1",
     "redux-thunk": "^2.3.0",
-    "source-map-support": "^0.5.9"
+    "source-map-support": "^0.5.9",
+    "virtuintaskdispatcher": "^0.0.24"
   },
   "devEngines": {
     "node": ">=7.x",
