--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "bootstrap": "lerna bootstrap",
     "run:gui": "lerna run --scope virtuingui2 dev --stream",
     "build": "yarn run build:rest && yarn run build:cli && yarn build:dispatcher",
-    "build:dispatcher": "lerna run build --scope virtuin-task-dispatcher --stream",
+    "build:dispatcher": "lerna run build --scope virtuintaskdispatcher --stream",
     "build:rest": "lerna run build --scope virtuin-task-rest-service --stream",
     "build:cli": "lerna run build --scope virtuin-cli --stream",
     "up": "lerna run --stream --scope virtuin-cli start -- up $(pwd)/../virtuinbasicexample/build/collection.yml",
