--- a/packages/virtuingui2/package.json
+++ b/packages/virtuingui2/package.json
@@ -266,6 +266,7 @@
     "dotenv": "^6.2.0",
     "electron-debug": "^2.0.0",
     "electron-log": "^2.2.17",
+    "electron-prompt": "^1.3.0",
     "electron-updater": "^4.0.0",
     "history": "^4.7.2",
     "re-resizable": "^4.11.0",
