--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "bootstrap": "lerna bootstrap",
-    "run:gui": "lerna run --scope virtuingui2 dev --stream",
+    "run:gui-old": "lerna run --scope virtuingui2 dev --stream",
     "build": "yarn run build:rest && yarn run build:cli && yarn build:dispatcher",
     "build:dispatcher": "lerna run build --scope virtuintaskdispatcher --stream",
     "build:rest": "lerna run build --scope virtuin-task-rest-service --stream",
