change mode to user or managed

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "up": "lerna run --stream --scope virtuin-cli start -- up $(pwd)/../virtuinbasicexample/build/collection.yml",
     "down": "lerna run --stream --scope virtuin-cli start -- down $(pwd)/../virtuinbasicexample/build/collection.yml",
     "run:taskone": "lerna run --stream --scope virtuin-cli start -- run -t 0 -g 0 $(pwd)/../virtuinbasicexample/build/collection.yml",
-    "run:gui": "lerna run --stream --scope virtuingui2 dev -- $(pwd)/../virtuinbasicexample/build/collection.yml"
+    "run:gui": "VIRTUIN_COLLECTION_LOCATION=$(pwd)/../virtuinbasicexample/build/collection.yml lerna run --stream --scope virtuingui2 dev"
   },
   "devDependencies": {
     "lerna": "^3.3.1"
