--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "private": true,
   "scripts": {
     "bootstrap": "lerna bootstrap",
-    "run:gui-old": "lerna run --scope virtuingui2 dev --stream",
     "build": "yarn run build:rest && yarn run build:cli && yarn build:dispatcher",
     "build:dispatcher": "lerna run build --scope virtuintaskdispatcher --stream",
     "build:rest": "lerna run build --scope virtuin-task-rest-service --stream",
@@ -11,7 +10,9 @@
     "up": "lerna run --stream --scope virtuin-cli start -- up $(pwd)/../virtuinbasicexample/build/collection.yml",
     "down": "lerna run --stream --scope virtuin-cli start -- down $(pwd)/../virtuinbasicexample/build/collection.yml",
     "run:taskone": "lerna run --stream --scope virtuin-cli start -- run -t 0 -g 0 $(pwd)/../virtuinbasicexample/build/collection.yml",
-    "run:gui": "VIRTUIN_COLLECTION_LOCATION=$(pwd)/../virtuinbasicexample/build/collection.yml lerna run --stream --scope virtuingui2 dev"
+	  "run:rest":	"node packages/task-rest-service/build/index.js",
+    "run:gui": "lerna run --scope virtuingui2 dev --stream",
+    "run:gui-coll": "VIRTUIN_COLLECTION_LOCATION=$(pwd)/../virtuinbasicexample/build/collection.yml lerna run --stream --scope virtuingui2 dev"
   },
   "devDependencies": {
     "lerna": "^3.3.1"
