--- a/packages/virtuingui2/package.json
+++ b/packages/virtuingui2/package.json
@@ -269,6 +269,7 @@
     "electron-prompt": "^1.3.0",
     "electron-updater": "^4.0.0",
     "history": "^4.7.2",
+    "notistack": "^0.5.0",
     "re-resizable": "^4.11.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
