--- a/packages/virtuingui2/package.json
+++ b/packages/virtuingui2/package.json
@@ -262,6 +262,7 @@
     "@fortawesome/fontawesome-free": "^5.5.0",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "@sentry/electron": "^0.16.0",
     "devtron": "^1.4.0",
     "dotenv": "^6.2.0",
     "electron-debug": "^2.0.0",
