--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "run:taskone": "lerna run --stream --scope virtuin-cli start -- run -t 0 -g 0 $(pwd)/../virtuinbasicexample/build/collection.yml",
 	  "run:rest":	"node packages/task-rest-service/build/index.js",
     "run:gui": "lerna run --scope virtuingui2 dev --stream",
-    "run:gui-coll": "VIRTUIN_COLLECTION_LOCATION=$(pwd)/../virtuinbasicexample/build/collection.yml lerna run --stream --scope virtuingui2 dev"
+    "run:gui-coll": "VIRTUIN_COLLECTION_LOCATION=$(pwd)/../virtuinbasicexample/build/collection.yml lerna run --stream --scope virtuingui2 dev",
+    "package": "lerna run --scope virtuingui2 package --stream"
   },
   "devDependencies": {
     "lerna": "^3.3.1"
