--- a/packages/virtuintaskdispatcher/package.json
+++ b/packages/virtuintaskdispatcher/package.json
@@ -38,11 +38,10 @@
   "license": "MIT",
   "homepage": "https://bitbucket.org/samteccmd/virtuintaskdispatcher#readme",
   "dependencies": {
-    "babel-runtime": "^6.26.0",
     "commander": "^2.16.0",
     "dateformat": "^3.0.3",
     "deep-diff": "^1.0.2",
-    "dotenv": "^6.0.0",
+    "dotenv": "^7.0.0",
     "fs-extra": "^7.0.0",
     "js-yaml": "^3.12.0",
     "ospath": "^1.2.2",
@@ -51,35 +50,46 @@
     "virtuin-task-rest-service": "^1.0.10"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^8.0.0",
-    "babel-jest": "^23.4.2",
-    "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-plugin-transform-optional-chaining": "^7.0.0-beta.3",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-flow": "^6.23.0",
-    "babel-preset-stage-0": "^6.24.1",
-    "documentation": "^8.1.2",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-do-expressions": "^7.0.0",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-proposal-function-bind": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.1.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/plugin-transform-react-constant-elements": "^7.0.0",
+    "@babel/plugin-transform-react-inline-elements": "^7.0.0",
+
+    "documentation": "^9.3.1",
     "eslint": "^5.4.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-formatter-pretty": "^1.3.0",
-    "eslint-plugin-compat": "^2.5.1",
-    "eslint-plugin-flowtype": "^2.35.1",
-    "eslint-plugin-flowtype-errors": "^3.3.1",
+    "eslint-formatter-pretty": "^2.1.1",
+    "eslint-plugin-compat": "^3.0.0",
+    "eslint-plugin-flowtype": "^3.4.2",
+    "eslint-plugin-flowtype-errors": "^4.0.0",
     "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jest": "^21.5.0",
+    "eslint-plugin-jest": "^22.3.2",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-promise": "^4.0.0",
     "eslint-plugin-react": "^7.3.0",
-    "flow-bin": "^0.81.0",
+    "flow-bin": "^0.94.0",
     "flow-copy-source": "^2.0.2",
     "flow-remove-types": "^1.2.3",
     "flow-typed": "^2.3.0",
-    "husky": "^0.14.3",
-    "jest": "^23.5.0",
-    "lint-staged": "^7.2.2",
+    "husky": "^1.3.1",
+    "jest": "^24.5.0",
+    "lint-staged": "^8.1.5",
     "npm-run-all": "^4.1.1"
   }
 }
