--- a/packages/task-rest-service/package.json
+++ b/packages/task-rest-service/package.json
@@ -1,7 +1,7 @@
 {
   "name": "virtuin-task-rest-service",
   "version": "1.0.10",
-  "main": "build/index.js",
+  "main": "distribution/index.js",
   "license": "MIT",
   "bin": {
     "local-server": "build/index.js"
@@ -10,8 +10,8 @@
     "start": "DEBUG=\"vrs:*\" node build/index.js",
     "test": "jest",
     "prepare": "yarn run build",
-    "build": "gulp build && yarn run build:flow",
-    "build:flow": "flow-copy-source -v -i '**/__tests__/**' src build"
+    "build": "./node_modules/.bin/babel ./src --out-dir ./distribution --source-maps",
+    "build:flow": "flow-copy-source -v -i '**/__tests__/**' src distribution"
   },
   "files": [
     "build/"
@@ -26,25 +26,36 @@
     }
   },
   "dependencies": {
-    "babel-plugin-transform-flow-strip-types": "6.22.0",
-    "babel-polyfill": "6.26.0",
-    "babel-preset-latest": "6.24.1",
     "body-parser": "1.18.3",
     "dateformat": "^3.0.3",
-    "debug": "^3.1.0",
-    "express": "4.16.3",
-    "gulp": "3.9.1",
-    "gulp-babel": "7.0.1",
-    "gulp-sourcemaps": "2.6.4",
-    "morgan": "1.9.0"
+    "debug": "^4.1.1",
+    "express": "4.16.4",
+    "morgan": "1.9.1"
   },
   "devDependencies": {
-    "flow-bin": "^0.81.0",
-    "flow-copy-source": "^2.0.2",
-    "flow-typed": "^2.0.0",
-    "gulp-flowtype": "1.0.0",
-    "jest": "23.5.0",
-    "supertest": "3.1.0",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/plugin-proposal-do-expressions": "^7.2.0",
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
+    "@babel/plugin-proposal-function-bind": "^7.2.0",
+    "@babel/plugin-proposal-function-sent": "^7.2.0",
+    "@babel/plugin-proposal-json-strings": "^7.2.0",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.2.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.2.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.2.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-syntax-import-meta": "^7.2.0",
+    "@babel/plugin-transform-react-constant-elements": "^7.2.0",
+    "@babel/plugin-transform-react-inline-elements": "^7.2.0",
+    "flow-copy-source": "^2.0.3",
+    "jest": "24.5.0",
+    "supertest": "4.0.0",
     "supertest-as-promised": "4.0.2"
   }
 }
