needed fixpath to get working with mac when run directly from GUI

--- a/packages/virtuintaskdispatcher/package.json
+++ b/packages/virtuintaskdispatcher/package.json
@@ -42,6 +42,7 @@
     "dateformat": "^3.0.3",
     "deep-diff": "^1.0.2",
     "dotenv": "^7.0.0",
+    "fix-path": "^2.1.0",
     "fs-extra": "^7.0.1",
     "js-yaml": "^3.12.2",
     "ospath": "^1.2.2",
@@ -52,8 +53,6 @@
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
-    "@babel/preset-flow": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.3.4",
     "@babel/plugin-proposal-do-expressions": "^7.2.0",
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
@@ -70,6 +69,8 @@
     "@babel/plugin-syntax-import-meta": "^7.2.0",
     "@babel/plugin-transform-react-constant-elements": "^7.2.0",
     "@babel/plugin-transform-react-inline-elements": "^7.2.0",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-flow": "^7.0.0",
     "documentation": "^9.3.1",
     "eslint": "^5.15.1",
     "eslint-config-airbnb": "^17.1.0",
