fix networking with docker

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "root",
-  "private": false,
+  "private": true,
   "license": "MIT",
   "scripts": {
     "bootstrap": "lerna bootstrap",
