--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -44,13 +44,12 @@
     "dotenv": "^7.0.0",
     "fs-extra": "^7.0.1",
     "ospath": "^1.2.2",
+    "readline-promise": "^1.0.4",
     "virtuintaskdispatcher": "^0.6.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
-    "@babel/preset-flow": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.3.4",
     "@babel/plugin-proposal-do-expressions": "^7.2.0",
     "@babel/plugin-proposal-export-default-from": "^7.2.0",
@@ -67,6 +66,8 @@
     "@babel/plugin-syntax-import-meta": "^7.2.0",
     "@babel/plugin-transform-react-constant-elements": "^7.2.0",
     "@babel/plugin-transform-react-inline-elements": "^7.2.0",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-flow": "^7.0.0",
     "documentation": "^9.3.1",
     "eslint": "^5.15.1",
     "eslint-config-airbnb": "^17.1.0",
