--- a/packages/virtuingui2/package.json
+++ b/packages/virtuingui2/package.json
@@ -132,7 +132,7 @@
   },
   "keywords": [
     "electron",
-    "boilerplate",
+    "virtuin",
     "react",
     "redux",
     "flow",
@@ -219,7 +219,7 @@
     "eslint-plugin-testcafe": "^0.2.1",
     "fbjs-scripts": "^1.0.1",
     "file-loader": "^3.0.1",
-    "flow-bin": "^0.94.0",
+    "flow-bin": "^0.96.0",
     "flow-runtime": "^0.17.0",
     "flow-typed": "^2.5.1",
     "husky": "^1.1.4",
@@ -262,7 +262,7 @@
     "@fortawesome/fontawesome-free": "^5.5.0",
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
-    "@sentry/electron": "^0.16.0",
+    "@sentry/electron": "^0.17.0",
     "devtron": "^1.4.0",
     "dotenv": "^7.0.0",
     "electron-debug": "^2.0.0",
@@ -270,15 +270,15 @@
     "electron-prompt": "^1.3.0",
     "electron-updater": "^4.0.0",
     "history": "^4.7.2",
-    "notistack": "^0.5.0",
+    "notistack": "^0.6.1",
     "re-resizable": "^4.11.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-hot-loader": "^4.3.12",
     "react-redux": "^6.0.1",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
-    "react-svg": "^7.2.6",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
+    "react-svg": "^8.0.2",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.4",
     "redux-saga": "^1.0.1",
