--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "run:taskone": "lerna run --stream --scope virtuin-cli start -- run -t 0 -g 0 $(pwd)/../virtuinbasicexample/build/collection.yml",
 	  "run:rest":	"node packages/task-rest-service/build/index.js",
     "run:gui": "lerna run --scope virtuingui2 dev --stream",
-    "package": "lerna run --scope virtuingui2 package --stream"
+    "package": "lerna run --scope virtuingui2 package --stream",
+    "package-all": "lerna run --scope virtuingui2 package-all --stream",
+    "package-win": "lerna run --scope virtuingui2 package-win --stream"
   },
   "devDependencies": {
     "lerna": "^3.3.1"
