--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
 	  "run:rest":	"node packages/task-rest-service/build/index.js",
     "run:gui": "lerna run --scope virtuingui2 dev --stream",
     "package": "lerna run --scope virtuingui2 package --stream",
-    "package-all": "lerna run --scope virtuingui2 package-all --stream",
-    "package-win": "lerna run --scope virtuingui2 package-win --stream"
+    "package:all": "lerna run --scope virtuingui2 package-all --stream",
+    "package:win": "lerna run --scope virtuingui2 package-win --stream",
+    "package:linux": "lerna run --scope virtuingui2 package-linux --stream"
   },
   "devDependencies": {
     "lerna": "^3.3.1"
