--- a/packages/virtuingui2/package.json
+++ b/packages/virtuingui2/package.json
@@ -264,6 +264,7 @@
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "@sentry/electron": "^0.17.1",
+    "core-js": "2",
     "devtron": "^1.4.0",
     "dotenv": "^7.0.0",
     "electron-debug": "^2.2.0",
